--- a/WhatBytes/app/templates/dashboard.html
+++ b/WhatBytes/app/templates/dashboard.html
@@ -8,8 +8,7 @@
 <body>
     <div class="dashboard-container">
         <h1>Dashboard</h1>
-        <p>Hi, My name is Abhishek Bhakuni</p>
-        <p>Hope you like this project</p>
+        <p>Hi, {{ username }}</p>
         <a href="{% url 'ProfilePage' %}">Your Profile</a>
     </div>
 </body>
