--- a/WhatBytes/app/templates/forgotpwd.html
+++ b/WhatBytes/app/templates/forgotpwd.html
@@ -63,5 +63,7 @@
                 {% endfor %}
             </ul>
             {% endif %}
+            <a href="{% url 'LoginPage' %}">Already have an account?</a>
+        </form>
 </body>
 </html>
